Changed Masonry to be loaded via JS, fied overlapping images issue by waiting for images to load before initilising

--- a/style.css
+++ b/style.css
@@ -121,3 +121,7 @@ div.content {
 #container {
 
 }
+
+.item {
+	
+}
